--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ install:
 - ps: . .\tests\Install.ps1
 
 test_script:
+  - ps: . .\tests\Optimise.ps1
   - ps: $res = Invoke-Pester -Path ".\tests" -OutputFormat NUnitXml -OutputFile TestsResults.xml -PassThru
   - ps: (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestsResults.xml))
   - ps: if ($res.FailedCount -gt 0) { throw "$($res.FailedCount) tests failed."}
