--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,9 @@
-version: 1.0.{build}
+version: 2019.0.{build}
 
 pull_requests:
   do_not_increment_build_number: true
+
+max_jobs: 1
 
 environment:
   GitHubKey:
