--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,37 +1,25 @@
 version: 2019.0.{build}
-
 pull_requests:
   do_not_increment_build_number: true
-
 max_jobs: 1
-
+image: WMF 5
 environment:
   GitHubKey:
     secure: unWb9ORoL3oo22K6z2U2fZ+AdBmv75laNb7jibBwQCMGv9u8Cs2GayQBGjkqfPro
+install:
+- ps: . .\ci\Install.ps1
+build_script:
+- ps: . .\ci\Build.ps1
+test_script:
+- ps: . .\ci\Tests.ps1
+deploy_script:
+- ps: >-
+    . .\scripts\Optimise-Images.ps1
+    . .\ci\Deploy.ps1
 
-image: WMF 5
-deploy: off
-build: off
+skip_commits:
+  message: /AppVeyor validate.*|Merge branch 'master' of.*/
 
 only_commits:
   files:
     - icons/*
-
-skip_commits:
-  message: /AppVeyor optimise and validate.*|Merge branch 'master' of.*/
-
-install:
-- ps: . .\tests\Install.ps1
-
-test_script:
-  - ps: . .\tests\Optimise.ps1
-  - ps: $res = Invoke-Pester -Path ".\tests" -OutputFormat NUnitXml -OutputFile TestsResults.xml -PassThru
-  - ps: (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestsResults.xml))
-  - ps: if ($res.FailedCount -gt 0) { throw "$($res.FailedCount) tests failed."}
-  - git config --global credential.helper store
-  - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GitHubKey):x-oauth-basic@github.com`n"
-  - git config --global user.email "aaron@stealthpuppy.com"
-  - git config --global user.name "Aaron Parker"
-  - git config --global core.autocrlf true
-  - git config --global core.safecrlf false
-  - ps: . .\tests\Build.ps1
